test/compile_error/redefined.conf.1.def
config redefined_conf {
	foo : int;
	foo : bool;
}
